--- a/pages/contratante.html
+++ b/pages/contratante.html
@@ -5,8 +5,76 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contratante_info</title>
+    <link rel="stylesheet" href="/style/contratante.css">
 </head>
 <body>
-    AAAAAAAAAAAAAA
+    <main class="conteudo">
+        <h1>Profissionais encontrados</h1>
+        <div class="filtro"></div>
+        <article class="grid_funcionario">
+            <div>
+                <img src="/img/pessoa01.png">
+                <p>Carlos felipe</p>
+                <p>Idade: 21 anos</p>
+                <p>São Paulo</p>
+                <div class="descricao">
+                    <img src="/img/classificacao.png">
+                    <img src="/img/sifrao.png">
+                </div>
+            </div>
+            <div>
+                <img src="/img/pessoa02.png">
+                <p>Beatriz Sampaio</p>
+                <p>Idade: 26 anos</p>
+                <p>Maringá</p>
+                <div class="descricao">
+                    <img src="/img/classificacao.png">
+                    <img src="/img/sifrao.png">
+                </div>
+            </div>
+            <div>
+                <img src="/img/pessoa03.png">
+                <p>Guilherme Silva</p>
+                <p>Idade: 29 anos</p>
+                <p>Belo Horizonte</p>
+                <div class="descricao">
+                    <img src="/img/classificacao.png">
+                    <img src="/img/sifrao.png">
+                </div>
+            </div>
+            <div>
+                <img src="/img/pessoa04.png">
+                <p>Fernando Amaro</p>
+                <p>Idade: 35 anos</p>
+                <p>São Paulo</p>
+                <div class="descricao">
+                    <img src="/img/classificacao.png">
+                    <img src="/img/sifrao.png">
+                </div>
+            </div>
+            <div>
+                <img src="/img/pessoa05.png">
+                <p>Milena</p>
+                <p>Idade: 18 anos</p>
+                <p>Santa Catarina</p>
+                <div class="descricao">
+                    <img src="/img/classificacao.png">
+                    <img src="/img/sifrao.png">
+                </div>
+            </div>
+            <div>
+                <img src="/img/pessoa06.png">
+                <p>Bruno Caetano</p>
+                <p>Idade: 25 anos</p>
+                <p>Rio de Janeiro</p>
+                <div class="descricao">
+                    <img src="/img/classificacao.png">
+                    <img src="/img/sifrao.png">
+                </div>
+            </div>
+            
+            
+        </article>
+    </main>
 </body>
 </html>
