--- a/pages/contratante.html
+++ b/pages/contratante.html
@@ -56,7 +56,7 @@
                 <img src="/img/pessoa05.png">
                 <p>Milena</p>
                 <p>Idade: 18 anos</p>
-                <p>Santa Catarina</p>
+                <p>Rondônea</p>
                 <div class="descricao">
                     <img src="/img/classificacao.png">
                     <img src="/img/sifrao.png">
