--- a/pages/contratante.html
+++ b/pages/contratante.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contratante_info</title>
-    <link rel="stylesheet" href="/style/contratante.css">
+    <link rel="stylesheet" href="./../style/contratante.css">
 </head>
 <body>
     <main class="conteudo">
