--- a/pages/contratante.html
+++ b/pages/contratante.html
@@ -13,63 +13,63 @@
         <div class="filtro"></div>
         <article class="grid_funcionario">
             <div>
-                <img src="/img/pessoa01.png">
+                <img src="./../img/pessoa01.png">
                 <p>Carlos felipe</p>
                 <p>Idade: 21 anos</p>
                 <p>São Paulo</p>
                 <div class="descricao">
-                    <img src="/img/classificacao.png">
-                    <img src="/img/sifrao.png">
+                    <img src="./../img/classificacao.png">
+                    <img src="./../img/sifrao.png">
                 </div>
             </div>
             <div>
-                <img src="/img/pessoa02.png">
+                <img src="./../img/pessoa02.png">
                 <p>Beatriz Sampaio</p>
                 <p>Idade: 26 anos</p>
                 <p>Maringá</p>
                 <div class="descricao">
-                    <img src="/img/classificacao.png">
-                    <img src="/img/sifrao.png">
+                    <img src="./../img/classificacao.png">
+                    <img src="./../img/sifrao.png">
                 </div>
             </div>
             <div>
-                <img src="/img/pessoa03.png">
+                <img src="./../img/pessoa03.png">
                 <p>Guilherme Silva</p>
                 <p>Idade: 29 anos</p>
                 <p>Belo Horizonte</p>
                 <div class="descricao">
-                    <img src="/img/classificacao.png">
-                    <img src="/img/sifrao.png">
+                    <img src="./../img/classificacao.png">
+                    <img src="./../img/sifrao.png">
                 </div>
             </div>
             <div>
-                <img src="/img/pessoa04.png">
+                <img src="./../img/pessoa04.png">
                 <p>Fernando Amaro</p>
                 <p>Idade: 35 anos</p>
                 <p>São Paulo</p>
                 <div class="descricao">
-                    <img src="/img/classificacao.png">
-                    <img src="/img/sifrao.png">
+                    <img src="./../img/classificacao.png">
+                    <img src="./../img/sifrao.png">
                 </div>
             </div>
             <div>
-                <img src="/img/pessoa05.png">
+                <img src="./../img/pessoa05.png">
                 <p>Milena</p>
                 <p>Idade: 18 anos</p>
                 <p>Rondônea</p>
                 <div class="descricao">
-                    <img src="/img/classificacao.png">
-                    <img src="/img/sifrao.png">
+                    <img src="./../img/classificacao.png">
+                    <img src="./../img/sifrao.png">
                 </div>
             </div>
             <div>
-                <img src="/img/pessoa06.png">
+                <img src="./../img/pessoa06.png">
                 <p>Bruno Caetano</p>
                 <p>Idade: 25 anos</p>
                 <p>Rio de Janeiro</p>
                 <div class="descricao">
-                    <img src="/img/classificacao.png">
-                    <img src="/img/sifrao.png">
+                    <img src="./../img/classificacao.png">
+                    <img src="./../img/sifrao.png">
                 </div>
             </div>
             
