Mudança nos títulos

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div>
             <a href="pages/contratante.html"><img src="img/chefe.png"></a>
             </div>
-            <p>Sou prestador de serviços</p>
+            <p>Sou contratante</p>
 
             
         </section>
@@ -29,7 +29,7 @@
             <div>
                 <a href="pages/funcionario.html"><img src="img/funcionario.png"></a>
                 </div>
-            <p>Quero contratar um serviço</p>
+            <p>Sou prestador de serviços</p>
             
         </section>
     </main>
