continuação do site parte 1

--- a/index.html
+++ b/index.html
@@ -8,13 +8,18 @@
     <link rel="stylesheet" href="style/main.css">
 </head>
 <body>
-    <article class="cabecalho">
-        <h2>Logo + Nome do site</h2>
-        <ul class="navegacao">
-            <li><a href="/">Quem somos?</a></li>
-            <li><a href="/">Informações</a></li>
+    <nav>
+        <div class="logo_empresa">
+            <img class="logo" src="./img/logo_construcao.jpg">
+            <h2>OBraszil</h2>
+        </div>
+        <ul>
+            <li><a href="#">Quem somos?</a></li>
+            <li><a href="#">Nossos parceiros</a></li>
+            <li><a href="#">Valores</a></li>
+            <li><a href="#">Saiba mais</a></li>
         </ul>
-    </article>
+    </nav>
 
     <main class="conteudo">
         <section class="empregador">
