--- a/pages/funcionario.html
+++ b/pages/funcionario.html
@@ -5,8 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Funcionário_info</title>
+    <link rel="stylesheet" href="../style/funcionario.css">
 </head>
 <body>
-    AAAAAAAAAAAAAAAAA
+    <nav>
+        <div class="logo_empresa">
+            <img class="logo" src="../img/logo_construcao.jpg">
+            <h2>OBraszil</h2>
+        </div>
+        <ul>
+            <li><a href="#">Quem somos?</a></li>
+            <li><a href="#">Nossos parceiros</a></li>
+            <li><a href="#">Valores</a></li>
+            <li><a href="#">Saiba mais</a></li>
+        </ul>
+    </nav>
+    <main>
+        <article class="login_funcionario">
+            <h3>Login </h3>
+            <div class="email">
+                <p>Email:</p>
+                <input type="text" placeholder="Digite aqui o seu email"> 
+            </div>
+            <div class="senha">
+                <p>Senha:</p>
+                <input type="text" placeholder="Digite aqui o sua senha"> 
+            </div>
+            <p>Não é cadastrado? <a href="#">Clique aqui</a></p>
+            <button class="btn">Login</button>
+            <p class="aviso">AVISO: por ser um projeto, não é necessário inserir dados, apenas clique no botão acima para acessar o perfil do funcionário.</p>
+        </article>
+    </main>
 </body>
 </html>
